--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.2",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
+    "react-owl-carousel2": "^0.3.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
