--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.2",
+    "react-alice-carousel": "^1.13.1",
     "react-code-input": "^3.8.1",
     "react-dom": "^16.8.2",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
-    "react-owl-carousel2": "^0.3.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
