--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.2",
-    "react-alice-carousel": "^1.13.1",
     "react-code-input": "^3.8.1",
     "react-dom": "^16.8.2",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
