Account courses page UI

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "jsonwebtoken": "^8.5.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
-    "react": "^16.8.2",
+    "react": "^16.8.4",
     "react-code-input": "^3.8.1",
-    "react-dom": "^16.8.2",
+    "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
     "react-modal": "^3.8.1",
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-slick": "^0.23.2",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "slick-carousel": "^1.8.1",
