--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
     "react-modal": "^3.8.1",
+    "react-pdf": "^4.0.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
