--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
+    "react-accessible-accordion": "^2.4.5",
     "react-code-input": "^3.8.1",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
