--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-accessible-accordion": "^2.4.5",
     "react-code-input": "^3.8.1",
     "react-collapsible": "^2.6.0",
+    "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.4",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
