--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-collapsible": "^2.6.0",
     "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.4",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.2",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
     "react-modal": "^3.8.1",
@@ -23,6 +25,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
