--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
+    "loaders.css": "^0.1.2",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
@@ -20,6 +21,7 @@
     "react-google-login": "^5.0.2",
     "react-icons": "^3.4.0",
     "react-intl-tel-input": "^7.0.1",
+    "react-loaders": "^3.0.1",
     "react-modal": "^3.8.1",
     "react-pdf": "^4.0.5",
     "react-redux": "^6.0.0",
