--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-promise": "^0.6.0",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2"
   },
