Responsive fixes, single course video and download URLs, publication purchase URL, ScrollToTop onNavigate, Twitter login component

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-loaders": "^3.0.1",
     "react-modal": "^3.8.1",
     "react-pdf": "^4.0.5",
+    "react-player": "^1.9.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
+    "react-twitter-auth": "0.0.13",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
