--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "loaders.css": "^0.1.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
@@ -16,6 +17,7 @@
     "react-code-input": "^3.8.1",
     "react-collapsible": "^2.6.0",
     "react-content-loader": "^4.2.1",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.4",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.2",
