--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^5.9.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "loaders.css": "^0.1.2",
@@ -32,7 +33,6 @@
     "react-scripts": "2.1.5",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
-    "react-twitter-auth": "0.0.13",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
