--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "2.1.5",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
+    "react-star-rating-component": "^1.4.1",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
