--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.2",
     "react-icons": "^3.4.0",
+    "react-image-gallery": "^0.8.16",
     "react-intl-tel-input": "^7.0.1",
     "react-loaders": "^3.0.1",
     "react-modal": "^3.8.1",
