--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
     "react-star-rating-component": "^1.4.1",
+    "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
