--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react-modal": "^3.8.1",
     "react-pdf": "^4.0.5",
     "react-player": "^1.9.3",
+    "react-read-pdf": "^2.0.9",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
     "react-star-rating-component": "^1.4.1",
+    "react-to-print": "^2.1.2",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
