--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-login": "^5.0.2",
     "react-icons": "^3.4.0",
     "react-image-gallery": "^0.8.16",
+    "react-intercom": "^1.0.15",
     "react-intl-tel-input": "^7.0.1",
     "react-loaders": "^3.0.1",
     "react-modal": "^3.8.1",
