--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-accessible-accordion": "^2.4.5",
     "react-code-input": "^3.8.1",
     "react-collapsible": "^2.6.0",
+    "react-collapsible-component": "^1.1.3",
     "react-content-loader": "^4.2.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.4",
