--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^5.9.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^2.2.0",
     "loaders.css": "^0.1.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
