--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.0",
     "jwt-decode": "^2.2.0",
     "loaders.css": "^0.1.2",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
@@ -45,8 +46,10 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "zoomus-jssdk": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
