--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@sweetalert/with-react": "^0.1.1",
+    "@u-wave/react-vimeo": "^0.6.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.9.2",
