General fixes, chat token

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SKIP_PREFLIGHT_CHECK=true
 
 REACT_APP_API_ENDPOINT=https://api.staging.hemma.sa/api/v1
+
+TWILIO_ACCOUNT_SID=AC065aa615a46136917378a32040cbe2db
+TWILIO_API_KEY=SKa52059ce4a3621412b9239737f2aacbd
+TWILIO_API_SECRET=VupO3T3FXYSrKvhM8iF81WisbTUqGh5p
+TWILIO_CHAT_SERVICE_SID=IS46c7e61cf66943bfb8c10981cca81a76
