--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_API_ENDPOINT=https://api.staging.hemma.sa/api/v1
+REACT_APP_API_ENDPOINT=https://api.hemma.sa/api/v1
 
 TWILIO_ACCOUNT_SID=AC065aa615a46136917378a32040cbe2db
 TWILIO_API_KEY=SKa52059ce4a3621412b9239737f2aacbd
