Intercom token integration

--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_API_ENDPOINT=https://api.hemma.sa/api/v1
+REACT_APP_API_ENDPOINT=https://api.staging.hemma.sa/api/v1
 
-TWILIO_ACCOUNT_SID=AC065aa615a46136917378a32040cbe2db
-TWILIO_API_KEY=SK86027db7289324886c02198a0b1951a1
-TWILIO_API_SECRET=9kUxGpYfhld5m53YTBFjgVxSPfB1ei2a
-TWILIO_CHAT_SERVICE_SID=IS76fcce93580345268ff2bfcc1edeae94
-
+INTERCOM_APP_ID=idpad6q3
