Changed intercom support url

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_API_ENDPOINT=https://api.staging.hemma.sa/api/v1
+REACT_APP_API_ENDPOINT=https://api.hemma.sa/api/v1
 
-INTERCOM_APP_ID=idpad6q3
