--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@u-wave/react-vimeo": "^0.6.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "emoji-mart": "^2.11.1",
     "firebase": "^5.9.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
