Send message function in chat

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "moment-hijri": "^2.1.1",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
