--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-to-print": "^2.1.2",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
+    "recorder-js": "^1.0.7",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-promise": "^0.6.0",
