--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-loaders": "^3.0.1",
     "react-modal": "^3.8.1",
     "react-pdf": "^4.0.5",
+    "react-pdf-js": "^5.0.6",
+    "react-pdf-watermark": "^1.0.6",
     "react-player": "^1.9.3",
     "react-read-pdf": "^2.0.9",
     "react-redux": "^6.0.0",
