Messages paginator in chat

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-google-login": "^5.0.2",
     "react-icons": "^3.4.0",
     "react-image-gallery": "^0.8.16",
+    "react-infinite-scroll-component": "^4.5.2",
     "react-intercom": "^1.0.15",
     "react-intl-tel-input": "^7.0.1",
     "react-loaders": "^3.0.1",
@@ -74,6 +75,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/preset-stage-1": "^7.0.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
