--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
     "react-star-rating-component": "^1.4.1",
+    "react-sweet-progress": "^1.1.2",
     "react-to-print": "^2.1.2",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
