--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lottiefiles/lottie-player": "^0.2.0",
     "@sweetalert/with-react": "^0.1.1",
     "@u-wave/react-vimeo": "^0.6.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "cleave.js": "^1.5.3",
     "emoji-mart": "^2.11.1",
     "firebase": "^5.9.2",
     "jquery": "^3.3.1",
