--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.8.4",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.2",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.4.0",
     "react-image-gallery": "^0.8.16",
     "react-infinite-scroll-component": "^4.5.2",
@@ -46,6 +47,7 @@
     "react-read-pdf": "^2.0.9",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "2.1.5",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
@@ -67,7 +69,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sitemap": "babel-node ./src/sitemap/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -79,9 +82,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
   }
