--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.4",
     "react-facebook-login": "^4.1.1",
+    "react-ga": "^2.7.0",
     "react-google-login": "^5.0.2",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.4.0",
