--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-loaders": "^3.0.1",
     "react-mic": "^12.4.1",
     "react-modal": "^3.8.1",
+    "react-moment-countdown": "^0.3.0",
+    "react-moment-proptypes": "^1.7.0",
     "react-pdf": "^4.0.5",
     "react-pdf-js": "^5.0.6",
     "react-pdf-watermark": "^1.0.6",
