--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
     "react-accessible-accordion": "^2.4.5",
+    "react-animated-progress-bar": "^1.0.4",
     "react-code-input": "^3.8.1",
     "react-collapsible": "^2.6.0",
     "react-collapsible-component": "^1.1.3",
