--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
     "emoji-mart": "^2.11.1",
-    "firebase": "^5.9.2",
-    "jquery": "^3.3.1",
+    "firebase": "^7.14.5",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.0",
     "jwt-decode": "^2.2.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moment-hijri": "^2.1.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.14.7",
     "react": "^16.8.4",
     "react-accessible-accordion": "^2.4.5",
@@ -52,7 +52,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-sitemap": "^1.2.0",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^3.4.1",
     "react-simple-animate": "^2.6.5",
     "react-slick": "^0.23.2",
     "react-star-rating-component": "^1.4.1",
@@ -93,7 +93,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.1.0"
   }
 }
