--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
+    "clipboard": "^2.0.6",
     "emoji-mart": "^2.11.1",
     "firebase": "^7.14.5",
     "jquery": "^3.5.1",
@@ -27,6 +28,7 @@
     "react-collapsible": "^2.6.0",
     "react-collapsible-component": "^1.1.3",
     "react-content-loader": "^4.2.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-countdown-now": "^2.1.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.4",
@@ -58,6 +60,7 @@
     "react-star-rating-component": "^1.4.1",
     "react-sweet-progress": "^1.1.2",
     "react-to-print": "^2.1.2",
+    "react-toasts": "^3.0.6",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
