--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-star-rating-component": "^1.4.1",
     "react-sweet-progress": "^1.1.2",
     "react-to-print": "^2.1.2",
+    "react-toast-notifications": "^2.4.0",
     "react-toasts": "^3.0.6",
     "react-video-thumbnail": "^0.1.3",
     "reactstrap": "^7.1.0",
