--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@lottiefiles/lottie-player": "^0.2.0",
     "@sweetalert/with-react": "^0.1.1",
     "@u-wave/react-vimeo": "^0.6.0",
+    "@wiris/mathtype-ckeditor5": "^7.21.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
@@ -28,8 +31,8 @@
     "react-collapsible": "^2.6.0",
     "react-collapsible-component": "^1.1.3",
     "react-content-loader": "^4.2.1",
-    "react-countdown": "^2.2.1",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-countdown": "^2.2.1",
     "react-countdown-now": "^2.1.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.4",
