--- a/.dockerignore
+++ b/.dockerignore
@@ -10,7 +10,7 @@
 
 # production
 /build
-
+.env
 # misc
 .DS_Store
 .env.local
@@ -30,4 +30,8 @@ yarn-error.log*
 *.code-workspace
 
 .idea/
+node_modules
 yarn.lock
+package-lock.json
+.gitignore
+build
