--- a/.env.docker
+++ b/.env.docker
@@ -1,4 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_API_ENDPOINT=https://stg.api.hemma.sa/api/v1
+REACT_APP_API_ENDPOINT=https://api.stg.hemma.sa/api/v1
 PUBLIC_URL=https://stg.hemma.sa
 NODE_ENV=production
