Add health check endpoints

--- a/.env.docker
+++ b/.env.docker
@@ -1,4 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_ENDPOINT=https://api.student.stg.hemma.sa/api/v1
 PUBLIC_URL=https://student.stg.hemma.sa
+REACT_APP_API_ENDPOINT_Health=https://api.student.stg.hemma.sa/
 NODE_ENV=production
