--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@lottiefiles/lottie-player": "^0.2.0",
+    "@sentry/react": "^5.27.4",
     "@sweetalert/with-react": "^0.1.1",
     "@u-wave/react-vimeo": "^0.6.0",
     "@wiris/mathtype-ckeditor5": "^7.21.0",
