--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "cleave.js": "^1.5.3",
     "clipboard": "^2.0.6",
     "emoji-mart": "^2.11.1",
-    "firebase": "^7.14.5",
+    "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.0",
     "jwt-decode": "^2.2.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.19",
+    "mime-types": "^2.1.27",
     "moment": "^2.24.0",
     "moment-hijri": "^2.1.1",
     "node-sass": "^4.14.1",
@@ -74,6 +75,7 @@
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "twilio-chat": "^3.2.3",
+    "uuid": "^8.3.1",
     "zoomus-jssdk": "^1.4.2"
   },
   "scripts": {
