--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_API_ENDPOINT=https://api.student.stg.hemma.sa/api/v1
-REACT_APP_API_ENDPOINT_Health=https://api.student.stg.hemma.sa/
+REACT_APP_API_ENDPOINT=https://localhost:44358/api/v1
+REACT_APP_API_ENDPOINT_Health=https://localhost:44358/
