--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.4",
     "react-accessible-accordion": "^2.4.5",
     "react-animated-progress-bar": "^1.0.4",
+    "react-bootstrap": "^1.6.1",
     "react-code-input": "^3.8.1",
     "react-collapsible": "^2.6.0",
     "react-collapsible-component": "^1.1.3",
