--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-infinite-scroll-component": "^4.5.2",
     "react-intercom": "^1.0.15",
     "react-intl-tel-input": "^7.0.1",
+    "react-js-pagination": "^3.0.3",
     "react-loaders": "^3.0.1",
     "react-mic": "^12.4.1",
     "react-modal": "^3.8.1",
