--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "sweetalert": "^2.1.2",
     "twilio-chat": "^3.2.3",
     "uuid": "^8.3.1",
+    "yup": "^0.32.9",
     "zoomus-jssdk": "^1.4.2"
   },
   "scripts": {
