--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard": "^2.0.6",
     "emoji-mart": "^2.11.1",
     "firebase": "^7.24.0",
+    "formik": "^2.2.9",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.0",
     "jwt-decode": "^2.2.0",
