--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wiris/mathtype-ckeditor5": "^7.21.0",
     "aos": "^2.3.4",
     "axios": "^0.18.0",
+    "bitly-react": "^6.0.12",
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
     "clipboard": "^2.0.6",
