--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
     "clipboard": "^2.0.6",
+    "crypto-js": "^4.1.1",
     "emoji-mart": "^2.11.1",
     "firebase": "^7.24.0",
     "formik": "^2.2.9",
