--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@glidejs/glide": "^3.4.1",
+    "@livechat/widget-react": "^1.1.0",
     "@lottiefiles/lottie-player": "^0.2.0",
     "@sentry/react": "^5.27.6",
     "@sentry/tracing": "^5.27.6",
@@ -56,6 +57,7 @@
     "react-intercom": "^1.0.15",
     "react-intl-tel-input": "^7.0.1",
     "react-js-pagination": "^3.0.3",
+    "react-livechat": "^1.1.1",
     "react-loaders": "^3.0.1",
     "react-mic": "^12.4.1",
     "react-modal": "^3.8.1",
