--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sentry/react": "^5.27.6",
     "@sentry/tracing": "^5.27.6",
     "@sweetalert/with-react": "^0.1.1",
+    "@tap-payments/gosell": "^2.0.0",
     "@u-wave/react-vimeo": "^0.6.0",
     "@wiris/mathtype-ckeditor5": "^7.21.0",
     "aos": "^2.3.4",
@@ -18,6 +19,7 @@
     "bootstrap": "^4.3.1",
     "cleave.js": "^1.5.3",
     "clipboard": "^2.0.6",
+    "core-js": "^3.21.1",
     "crypto-js": "^4.1.1",
     "emoji-mart": "^2.11.1",
     "firebase": "^7.24.0",
@@ -28,6 +30,8 @@
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.19",
     "mime-types": "^2.1.27",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "moment": "^2.24.0",
     "moment-hijri": "^2.1.1",
     "node-sass": "^4.14.1",
@@ -66,7 +70,7 @@
     "react-pdf-watermark": "^1.0.6",
     "react-player": "^1.9.3",
     "react-read-pdf": "^2.0.9",
-    "react-redux": "^6.0.0",
+    "react-redux": "^7.2.7",
     "react-router-dom": "^4.3.1",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^3.4.3",
